update rule status
